syntax = "proto3";
package v1;
option go_package = "github.com/cossim/coss-server/service/msg/api/v1";

message SendUserMsgRequest{
  // @inject_tag: json:"sender_id" form:"sender_id" uri:"sender_id"
  string SenderId=1;
  // @inject_tag: json:"receiver_id" form:"receiver_id" uri:"receiver_id"
  string ReceiverId=2;
  // @inject_tag: json:"content" form:"content" uri:"content"
  string Content=3;
  // @inject_tag: json:"type" form:"type" uri:"type"
  int32 Type=4;
  // @inject_tag: json:"replay_id" form:"replay_id" uri:"replay_id"
  uint64 ReplayId=5;
}

message SendGroupMsgRequest{
  // @inject_tag: json:"user_id" form:"user_id" uri:"user_id"
  string UserId=1;
  // @inject_tag: json:"group_id" form:"group_id" uri:"group_id"
  uint32 GroupId=2;
  // @inject_tag: json:"content" form:"content" uri:"content"
  string Content=3;
  // @inject_tag: json:"type" form:"type" uri:"type"
  uint32 Type=4;
  // @inject_tag: json:"replay_id" form:"replay_id" uri:"replay_id"
  uint32 ReplayId=5;
}

message GetUserMsgListRequest{
  // @inject_tag: json:"user_id" form:"user_id" uri:"user_id"
  string UserId=1;
  // @inject_tag: json:"friend_id" form:"friend_id" uri:"friend_id"
  string FriendId = 2;
  // @inject_tag: json:"type" form:"type" uri:"type"
  int32 Type = 3;
  // @inject_tag: json:"content" form:"content" uri:"content"
  string Content = 4;
  // @inject_tag: json:"page_size" form:"page_size" uri:"page_size"
  int32 PageSize = 5;
  // @inject_tag: json:"page_number" form:"page_number" uri:"page_number"
  int32 PageNum = 6;
}

message UserMessage{
  // @inject_tag: json:"id"
  uint32 Id=1;
  // @inject_tag: json:"sender_id"
  string SenderId=2;
  // @inject_tag: json:"receiver_id"
  string ReceiverId=3;
  // @inject_tag: json:"content"
  string Content=4;
  // @inject_tag: json:"type"
  uint32 Type=5;
  // @inject_tag: json:"replay_id"
  uint64 ReplayId=6;
  // @inject_tag: json:"is_read"
  int32 IsRead=7;
  // @inject_tag: json:"read_at"
  int64 ReadAt=8;
  // @inject_tag: json:"receive_id"
  string ReceiveId=9;
  // @inject_tag: json:"created_at"
  int64 CreatedAt=10;
}
message GroupMessage {
  // @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"group_id"
  uint32 Group_id = 2;
  // @inject_tag: json:"type"
  uint32 Type = 3;
  // @inject_tag: json:"reply_id"
  uint32 Reply_id = 4;
  // @inject_tag: json:"read_count"
  int32 Read_count = 5;
  // @inject_tag: json:"uid"
  string Uid = 6;
  // @inject_tag: json:"content"
  string Content = 7;
  // @inject_tag: json:"created_at"
  int64 Created_at = 8;
}

message GetUserMsgListResponse{
  // @inject_tag: json:"user_messages" form:"user_messages" uri:"user_messages"
  repeated UserMessage UserMessages = 1;
  // @inject_tag: json:"total" form:"total" uri:"total"
  int32 Total = 2;
  // @inject_tag: json:"current_page" form:"current_page" uri:"current_page"
  int32 CurrentPage = 3;
}

message SendUserMsgResponse{

}

message SendGroupMsgResponse{
  // @inject_tag: json:"msg_id" form:"msg_id" uri:"msg_id"
  uint32 msgId = 1;
  // @inject_tag: json:"group_id" form:"group_id" uri:"group_id"
  uint32 groupId = 2;
}

message UserMsgRequest {
  // @inject_tag: json:"user_id"
  string user_id = 1;
  // @inject_tag: json:"friend_id"
  string friend_id = 2;
}

message GroupMsgRequest {
  // @inject_tag: json:"user_id"
  uint32 group_id = 1;
}
message UserMessages {
  // @inject_tag: json:"user_messages"
  repeated UserMessage UserMessages = 1;
}

message GroupMessages {
  // @inject_tag: json:"group_messages"
  repeated GroupMessage GroupMessages = 1;
}
message UserMsgsRequest {
  // @inject_tag: json:"user_id"
  string user_id = 1;
  // @inject_tag: json:"friend_id"
  repeated string friend_id = 2;
}
message GroupMsgsRequest {
  // @inject_tag: json:"group_id"
  repeated uint32 group_id = 1;
}
service MsgService{
  rpc SendUserMessage(SendUserMsgRequest) returns(SendUserMsgResponse);
  rpc SendGroupMessage(SendGroupMsgRequest) returns(SendGroupMsgResponse);
  rpc GetUserMessageList(GetUserMsgListRequest) returns(GetUserMsgListResponse);
  rpc GetLastMsgsForUserWithFriends(UserMsgsRequest) returns (UserMessages);
  rpc GetLastMsgsForGroupsWithIDs(GroupMsgsRequest) returns (GroupMessages);
}